[tool.poetry]
name = "charmed-traceback"
version = "0.1.2"
description ="Automatically apply traceback styling akin to Jetbrains Traceback highlighting, providing much easier debugging and log searching, as-well as feel more at home away from PyCharm"
authors = [
    "Gideon Felt <gideonfelt.dev@gmail.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Gideon-Felt/charmed_traceback"
repository = "https://github.com/Gideon-Felt/charmed_traceback"
packages = [
    {include = "charmed_traceback/charmed_traceback.py"},
    {include = "charmed_traceback/__init__.py"},
    {include = "charmed_traceback/__main__.py"},
    {include = "charmed_traceback/auto"},
    {include = "charmed_traceback/always"},
    {include = "charmed_traceback/py.typed"},
    {include = "MANIFEST.in"},
]
keywords = [
    "traceback",
    "styling",
    "developer"
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
]


[tool.poetry.dependencies]
python = ">=3.7.0,<4.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"


[build-system]
requires = ["poetry-core==1.1.12"]
build-backend = "poetry.core.masonry.api" 
